<resources>
    <!-- App Details-->
    <string name="app_name">Learn</string>
    <string name="title_home">Home</string>
    <string name="title_learn">Learn</string>
    <string name="title_social">Social</string>
    <string name="title_tools">Tools</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_change_password">Change Password</string>
    <string name="menu_home">Home</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_profile">Profile</string>
    <string name="account">Account</string>
    <string name="change_password">Change Password</string>
    <string name="theme">Theme</string>
    <string name="more">More</string>
    <string name="osl">Open Source Libraries</string>
    <string name="change_log">Change Log</string>
    <string name="about">About</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dropdown">Dropdown</string>
    <string name="title_my_activity">My Activity</string>

    <!-- Developer Details-->
    <string name="developers">Developers</string>
    <string name="suprad">Suprad Parashar</string>
    <string name="aad">Android Application Developer</string>
    <string name="github">Github</string>
    <string name="linkedin">LinkedIn</string>
    <string name="instagram">Instagram</string>
    <string name="srivalli">Srivalli S B</string>
    <string name="wd">Web Developer</string>

    <!-- UI Strings -->
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_reverse">\?Forgot Password</string>
    <string name="user_profile_image">Profile Image</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="currently_in">Currently In</string>
    <string name="stream">Stream</string>
    <string name="branch">Branch</string>
    <string name="university">University</string>
    <string name="college_name">Name of College</string>
    <string name="i_am_a">I am a</string>
    <string name="student">Student</string>
    <string name="mentor">Mentor</string>
    <string name="edit">Edit</string>
    <string name="unknown">Unknown</string>
    <string name="save">Save</string>
    <string name="semester">Semester</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="rate">Rate</string>
    <string name="videos">Videos</string>
    <string name="documents">Documents</string>
    <string name="courses">Courses</string>
    <string name="projects">Projects</string>
    <string name="username">Username</string>
    <string name="not_available">Not Available</string>
    <string name="next">Next</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="back_button">Back Button</string>
    <string name="other">Other</string>
    <string name="app">App</string>
    <string name="logout">Logout</string>
    <string name="title_activity_view_courses_data">ViewCoursesDataActivity</string>
    <string name="no_prerequisites">No Prerequisites Required</string>
    <string name="prerequisites">Prerequisites</string>
    <string name="previous">Previous</string>
    <string name="welcome">Welcome</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="google_sign_in_button">Google Sign In Button</string>
    <string name="learn_logo">Learn Logo</string>
    <string name="illustration">Illustration</string>
    <string name="create_account">Create Account</string>
    <string name="account_already">Already have an Account?</string>
    <string name="no_resources_available">No Resources Available😭</string>
    <string name="help_message_resources">Have any good resource to share with fellow students? Help us!</string>
    <string name="add_resource">Add Resource</string>
    <string name="title">Title</string>
    <string name="domain">Domain</string>
    <string name="type">Type</string>
    <string name="link">Link</string>
    <string name="from">From</string>
    <string name="course">Course</string>
    <string name="what_learn_today">What do you want to learn today?</string>
    <string name="welcome_back">Welcome Back, </string>
    <string name="exclamation">!</string>
    <string name="recent_activities">Recent Activities</string>
    <string name="change_photo">Change Photo</string>
    <string name="reminders">Reminders</string>
    <string name="turn_on_reminders">Turn on Daily Reminders</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="_10_00">10:00</string>
    <string name="turn_reminders_on_off">Turn Reminders On/Off</string>
    <string name="options_three_dots">⋮</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="remind_me_on">Remind Me on…</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="strict_reminder">Strict Reminder</string>

    <string-array name="currently_in">
        <!--        <item>Class 11</item>-->
        <!--        <item>Class 12</item>-->
        <item>Undergraduate</item>
    </string-array>

    <string-array name="stream_school">
        <item>Science</item>
        <item>Others</item>
    </string-array>

    <string-array name="stream_undergraduate">
        <item>Engineering</item>
        <!--        <item>Others</item>-->
    </string-array>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dictum fringilla nulla, non molestie dui gravida vitae. Sed eget convallis ante. Mauris sit amet leo sit amet sem pretium cursus non ac lorem. Praesent tempor, est a scelerisque bibendum, tellus dolor tincidunt massa, eget tincidunt erat est vel mi. Nam sodales scelerisque felis, nec faucibus magna iaculis eget. Fusce sed auctor quam. Nunc mollis orci et nunc lobortis sodales. Nulla sagittis nisl eu nibh consequat cursus. Maecenas ornare neque id viverra laoreet.</string>
    <string name="empty_activities">No Activities. Let\'s Learn</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_learn">Learn aims to provide curated educational resources, made available by various educators and content creators around the world, across various domains, to students. We at Learn believe that we must learn concepts for our better understanding and skill development and not just study them for the sake of marks. Learn provides a platform for students to access various resources such as Videos, Courses, etc. Let\'s learn something new every day.</string>
    <string name="new_user">New User?</string>
    <string name="lets_learn">Let\'s Learn something today</string>
    <string name="indicator">indicator</string>

    <string-array name="branch_science">
        <item>PCM + Biology</item>
        <item>PCM + Computer Science</item>
        <item>PCM + Electronics</item>
        <item>Others</item>
    </string-array>

    <string-array name="profile_links">
        <item>My Profile</item>
        <!--        <item>My Classroom</item>-->
        <item>My Activity</item>
        <!--        <item>My Achievements</item>-->
        <item>About</item>
        <item>FAQs</item>
        <item>Logout</item>
    </string-array>

    <string-array name="branch_engineering">
        <item>Computer Science and Engineering</item>
        <item>Information Science and Engineering</item>
        <!--        <item>Electronics and Communication Engineering</item>-->
        <!--        <item>Electronics and Electrical Engineering</item>-->
        <!--        <item>Mechanical Engineering</item>-->
        <!--        <item>Civil Engineering</item>-->
        <!--        <item>Industrial Engineering and Management</item>-->
        <!--        <item>Instrumentation Engineering</item>-->
        <!--        <item>Aerospace Engineering</item>-->
        <!--        <item>Others</item>-->
    </string-array>

    <string-array name="boards">
        <item>Central Board of Secondary Education</item>
        <item>Karnataka State Secondary Education Examination Board</item>
    </string-array>

    <string-array name="universities">
        <item>Visvesvaraya Technological University</item>
        <!--        <item>Bangalore University</item>-->
        <!--        <item>PES University</item>-->
    </string-array>

    <string-array name="learn_list">
        <item>My Syllabus</item>
        <item>Engineering</item>
    </string-array>
</resources>
