<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_learn"
        android:icon="@drawable/ic_learn"
        android:title="@string/title_learn" />

    <item
        android:id="@+id/navigation_social"
        android:icon="@drawable/ic_social"
        android:title="@string/title_social" />

    <!--    <item-->
    <!--        android:id="@+id/navigation_tools"-->
    <!--        android:icon="@drawable/ic_tools"-->
    <!--        android:title="@string/title_tools" />-->

    <!--    <item-->
    <!--        android:id="@+id/navigation_profile"-->
    <!--        android:icon="@drawable/ic_profile"-->
    <!--        android:title="@string/title_profile" />-->

</menu>
