<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item android:title="@string/other">
            <menu>
                <group android:checkableBehavior="single">
                    <!--                    <item-->
                    <!--                        android:id="@+id/navigation_tools"-->
                    <!--                        android:icon="@drawable/ic_tools"-->
                    <!--                        android:title="@string/menu_tools" />-->
                    <item
                        android:id="@+id/navigation_profile"
                        android:icon="@drawable/ic_profile"
                        android:title="@string/menu_profile" />
                </group>
            </menu>
        </item>
    </group>
</menu>